trying to fix overflow

--- a/src/layout/Small.scss
+++ b/src/layout/Small.scss
@@ -1,7 +1,7 @@
 @media (min-width: 1px) and (max-width: 700px) {
   .App {
     display: grid;
-    height: 100vh;
+    height: calc(100vh - 103px);
   }
 
   .Main {
